compiler/tests/fixtures/compile_errors/numeric_capacity_mismatch/u256_neg.fe
contract Foo:
    pub def bar() -> u256:
        return u256(-1)